# CLICalculator

./: CMakeLists.txt  Calculator.cpp  Calculator.h  GunitTest.cpp  GunitTest.h  InputHandler.cpp  InputHandler.h  OhmCalculator.cpp  OhmCalculator.h  ResProCalculator.cpp  ResProCalculator.h  main.cpp  skriva.txt
